# my-starter-project

nds-starter/: .gitignore  CMakeLists.txt
nds-starter/.cache/clangd/index/: main.cpp.416666838C8371C9.idx
nds-starter/arm7/: CMakeLists.txt
nds-starter/arm7/src/: main.cpp
nds-starter/src/: main.cpp
raylib-cpp/: .gitignore  CMakeLists.txt
raylib-cpp/src/: main.cpp
